# chaff

./: CHANGELOG.md  Cargo.toml  README.md
contrib/: chaff-cron.sh  chaff-hygiene.service  chaff-hygiene.timer  claude-chaff.service  claude-chaff.timer
src/: gitignore.rs  guard.rs  lib.rs  main.rs  patterns.rs  policy.rs  repair.rs  survey.rs
src/templates/: gitignore_generic.txt
tests/: gitignore_tests.rs  guard_tests.rs  policy.rs  repair_tests.rs  survey_tests.rs
