[package]
name = "chaff"
version = "0.3.0"
edition = "2021"
rust-version = "1.85"
description = "Honest tracked-build-artifact enumerator for git repos"
license = "MIT"

[[bin]]
name = "chaff"
path = "src/main.rs"

[lib]
name = "chaff"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
